# llm-control-engine

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt  test_universal.py  validate_llmauditor.py
examples/: chatbot_test.py
llmauditor/: __init__.py  auditor.py  cost.py  evaluation.py  exporter.py  hallucination.py  report.py  scoring.py  suggestions.py
llmcontrolengine/: __init__.py  control.py  exporter.py  report.py
reports_validation/: audit_71329165_20260303_173722.md  audit_f5a60580_20260303_173821.md  certification_Market_Analysis_App_20260303_173721.html  certification_Market_Analysis_App_20260303_173721.md  certification_Market_Analysis_App_20260303_173821.html  certification_Market_Analysis_App_20260303_173821.md
