[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmauditor"
version = "1.1.0"
description = "LLMAuditor — Execution-Based GenAI Application Evaluation & Certification Framework. Audit, track, and certify any LLM/GenAI/Agentic AI application with cost tracking, hallucination detection, and governance enforcement."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "llm",
    "ai-governance",
    "audit",
    "token-tracking",
    "cost-estimation",
    "generative-ai",
    "execution-control",
    "hallucination-detection",
    "certification",
    "agentic-ai",
    "openai",
    "langchain",
    "anthropic",
    "gemini",
    "llm-evaluation",
    "ai-safety",
    "mlops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rich>=13.0.0",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/AI-Solutions-KK/llmauditor"
Documentation = "https://github.com/AI-Solutions-KK/llmauditor/blob/main/DOCUMENTATION.md"
Repository = "https://github.com/AI-Solutions-KK/llmauditor"
Issues = "https://github.com/AI-Solutions-KK/llmauditor/issues"
Changelog = "https://github.com/AI-Solutions-KK/llmauditor/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmauditor*"]
